@@ -12,6 +12,7 @@
 - improved streaming files
 - fixed `close` message in WebSocket
 - extended `flowstreaminstance.close(removed)` delegate by adding `removed` argument
+- exchanged functionality between `>field` (it performs `MAX`) `<field` (it performs `MIN`) in TextDB
 
 ========================
 0.0.58
